bug(hr): scrolling issue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -382,12 +382,12 @@ html, body {
   background-image: url('/headshot3.png');
   background-size: cover;
   background-position: center top;
-  background-attachment: fixed;
+  background-attachment: scroll;
 }
 
-@media (hover: none) and (pointer: coarse) {
+@media (hover: hover) and (pointer: fine) {
   .about-section {
-    background-attachment: scroll;
+    background-attachment: fixed;
   }
 }
 
